@@ -17,7 +17,7 @@ my $prereqs  = {
   'requires' => {
     'Date::Format' => '2.24',
     'Encode' => '2.67',
-    'File::DataClass' => 'v0.62.0',
+    'File::DataClass' => 'v0.67.0',
     'Moo' => '2.000001',
     'Try::Tiny' => '0.22',
     'Type::Tiny' => '1.000002',
